--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,19 @@ p {
 
 pre code {
   background-color: #f5f5f5;
-  padding: 10px;
+  padding: 15px;
   border-radius: 5px;
   overflow-x: auto;
+  display: block;
+  margin-top: 1em;
+}
+
+code {
+  font-size: 1.1em;
+  font-family: "Courier New", Courier, monospace;
+  background-color: #f5f5f5;
+  padding: 0.2em 0.4em;
+  border-radius: 3px;
 }
 
 a {
@@ -55,19 +65,6 @@ h2 {
   padding-bottom: 5px;
 }
 
-h3 {
-  font-size: 1.5em;
-  margin-top: 1.5em;
-}
-
-code {
-  font-size: 1.1em;
-  font-family: "Courier New", Courier, monospace;
-  background-color: #f5f5f5;
-  padding: 0.2em 0.4em;
-  border-radius: 3px;
-}
-
 footer {
   text-align: center;
   font-size: 1em;
@@ -85,21 +82,3 @@ section {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-section h2 {
-  font-size: 1.8em;
-  color: #333;
-  margin-bottom: 1em;
-}
-
-section p {
-  font-size: 1.1em;
-  color: #555;
-  margin-bottom: 1.5em;
-}
-
-pre {
-  background-color: #f5f5f5;
-  padding: 15px;
-  border-radius: 8px;
-  margin-bottom: 2em;
-}
